--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "typescript": "^5.1.3"
   },
   "scripts": {
-    "test": "jest"
+    "test": "npm run tsc -- --noEmit && jest",
+    "tsc": "tsc"
+  },
+  "dependencies": {
+    "@types/uuid": "^9.0.2",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.32.1",
+    "sequelize-typescript": "^2.1.5",
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.0"
   }
 }
